Fix font size of input on mobile

--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -33,3 +33,11 @@ $panel-default-heading-bg: #F0F0F0;
         margin-bottom: 50px;
     }
 }
+
+@media screen and (-webkit-min-device-pixel-ratio:0) { 
+  select,
+  textarea,
+  input {
+    font-size: 16px;
+  }
+}
